# herbalizer

./: LICENSE  README.md  herbalizer.cabal  notes.txt  parse.hs
src/: Main.hs  Utils.hs
