Name: herbalizer
Version: 0.4.5

Synopsis: HAML to ERB translator
Description:
  HAML to ERB translator
Author: Daniel Choi
Maintainer: dhchoi@gmail.com
Build-Type: Simple
Category: Utility
License:             MIT
License-file:        LICENSE
Cabal-Version: >= 1.4
Executable herbalizer
  Hs-Source-Dirs: src
  main-is: Main.hs

  GHC-Options: -Wall 
  Build-Depends: 
    base >= 4 && < 5, 
    ghc-prim,
    parsec,
    indents,
    containers,
    regex-posix,
    mtl

  
