Name: herbalizer
Version: 0.4.6

Synopsis: HAML to ERB translator
Description:
  HAML to ERB translator
Author: Daniel Choi
Maintainer: dhchoi@gmail.com
Build-Type: Simple
Category: Utility
License:             MIT
License-file:        LICENSE
Cabal-Version: >= 1.6
Source-repository head
  type:     git
  location: git@github.com:danchoi/herbalizer.git
Executable herbalizer
  Hs-Source-Dirs: src
  main-is: Main.hs

  GHC-Options: -Wall 
  Build-Depends: 
    base >= 4 && < 5, 
    ghc-prim,
    parsec,
    indents,
    containers,
    regex-posix,
    mtl

  
